<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTransparent"
    tools:context=".activity.DivisionalListActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvDhakaDivision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/aboutOfMargin"
                android:background="@drawable/question_option_desing_view"
                android:padding="@dimen/aboutOfTextPadding"
                android:text="@string/division_One"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/aboutOfTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvChitagong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/aboutOfMargin"
                android:background="@drawable/question_option_desing_view"
                android:padding="@dimen/aboutOfTextPadding"
                android:text="@string/division_Two"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/aboutOfTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRajshahi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/aboutOfMargin"
                android:background="@drawable/question_option_desing_view"
                android:padding="@dimen/aboutOfTextPadding"
                android:text="@string/division_Three"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/aboutOfTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvKhulna"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/aboutOfMargin"
                android:background="@drawable/question_option_desing_view"
                android:padding="@dimen/aboutOfTextPadding"
                android:text="@string/division_Four"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/aboutOfTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvBorishal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/aboutOfMargin"
                android:background="@drawable/question_option_desing_view"
                android:padding="@dimen/aboutOfTextPadding"
                android:text="@string/division_Five"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/aboutOfTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSylhet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/aboutOfMargin"
                android:background="@drawable/question_option_desing_view"
                android:padding="@dimen/aboutOfTextPadding"
                android:text="@string/division_Six"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/aboutOfTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRangpur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/aboutOfMargin"
                android:background="@drawable/question_option_desing_view"
                android:padding="@dimen/aboutOfTextPadding"
                android:text="@string/division_Seven"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/aboutOfTextSize"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMaymansing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/aboutOfMargin"
                android:background="@drawable/question_option_desing_view"
                android:padding="@dimen/aboutOfTextPadding"
                android:text="@string/division_Eight"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/aboutOfTextSize"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>

<!--    <com.google.android.gms.ads.AdView-->
<!--        android:id="@+id/adView"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0dp"-->
<!--        android:background="#747474"-->
<!--        app:adSize="SMART_BANNER"-->
<!--        app:adUnitId="@string/banner_id"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>